--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
      <head>
-     <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	 <link rel="shortcut icon" href="/favicon.ico" />
-     <title>Время</title>
-	 <!-- Стили страницы -->
+     <title>Г‚Г°ГҐГ¬Гї</title>
+	 <!-- Г‘ГІГЁГ«ГЁ Г±ГІГ°Г Г­ГЁГ¶Г» -->
 <style type="text/css">
 body{
 	 background:#202020;
@@ -51,35 +51,35 @@ ul li { display:inline; font-size:10em; text-align:center; font-family:Arial, He
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-// Создаем две переменные с названиями месяцев и дней недели в массиве
-var monthNames = [ "Январь", "Февраль", "Март", "Апрель", "Май", "Июнь", "Июль", "Август", "Сентябрь", "Октябрь", "Ноябрь", "Декабрь" ]; 
-var dayNames= ["Воскресенье","Понедельник","Вторник","Среда","Четверг","Пятница","Суббота"]
+// Г‘Г®Г§Г¤Г ГҐГ¬ Г¤ГўГҐ ГЇГҐГ°ГҐГ¬ГҐГ­Г­Г»ГҐ Г± Г­Г Г§ГўГ Г­ГЁГїГ¬ГЁ Г¬ГҐГ±ГїГ¶ГҐГў ГЁ Г¤Г­ГҐГ© Г­ГҐГ¤ГҐГ«ГЁ Гў Г¬Г Г±Г±ГЁГўГҐ
+var monthNames = [ "ГџГ­ГўГ Г°Гј", "Г”ГҐГўГ°Г Г«Гј", "ГЊГ Г°ГІ", "ГЂГЇГ°ГҐГ«Гј", "ГЊГ Г©", "Г€ГѕГ­Гј", "Г€ГѕГ«Гј", "ГЂГўГЈГіГ±ГІ", "Г‘ГҐГ­ГІГїГЎГ°Гј", "ГЋГЄГІГїГЎГ°Гј", "ГЌГ®ГїГЎГ°Гј", "Г„ГҐГЄГ ГЎГ°Гј" ]; 
+var dayNames= ["Г‚Г®Г±ГЄГ°ГҐГ±ГҐГ­ГјГҐ","ГЏГ®Г­ГҐГ¤ГҐГ«ГјГ­ГЁГЄ","Г‚ГІГ®Г°Г­ГЁГЄ","Г‘Г°ГҐГ¤Г ","Г—ГҐГІГўГҐГ°ГЈ","ГЏГїГІГ­ГЁГ¶Г ","Г‘ГіГЎГЎГ®ГІГ "]
 
-// Создаем объект newDate()
+// Г‘Г®Г§Г¤Г ГҐГ¬ Г®ГЎГєГҐГЄГІ newDate()
 var newDate = new Date();
-// Извлекаем текущую дату из объекта Date
+// Г€Г§ГўГ«ГҐГЄГ ГҐГ¬ ГІГҐГЄГіГ№ГіГѕ Г¤Г ГІГі ГЁГ§ Г®ГЎГєГҐГЄГІГ  Date
 newDate.setDate(newDate.getDate());
-// На выходе день, дата, месяц и год    
+// ГЌГ  ГўГ»ГµГ®Г¤ГҐ Г¤ГҐГ­Гј, Г¤Г ГІГ , Г¬ГҐГ±ГїГ¶ ГЁ ГЈГ®Г¤    
 $('#Date').html(dayNames[newDate.getDay()] + " " + newDate.getDate() + ' ' + monthNames[newDate.getMonth()] + ' ' + newDate.getFullYear());
 
 setInterval( function() {
-	// Создаем объект newDate() и извлекаем секунды текущего времени
+	// Г‘Г®Г§Г¤Г ГҐГ¬ Г®ГЎГєГҐГЄГІ newDate() ГЁ ГЁГ§ГўГ«ГҐГЄГ ГҐГ¬ Г±ГҐГЄГіГ­Г¤Г» ГІГҐГЄГіГ№ГҐГЈГ® ГўГ°ГҐГ¬ГҐГ­ГЁ
 	var seconds = new Date().getSeconds();
-	// Добавляем начальный ноль к значению секунд
+	// Г„Г®ГЎГ ГўГ«ГїГҐГ¬ Г­Г Г·Г Г«ГјГ­Г»Г© Г­Г®Г«Гј ГЄ Г§Г­Г Г·ГҐГ­ГЁГѕ Г±ГҐГЄГіГ­Г¤
 	$("#sec").html(( seconds < 10 ? "0" : "" ) + seconds);
 	},1000);
 	
 setInterval( function() {
-	// Создаем объект newDate() и извлекаем минуты текущего времени
+	// Г‘Г®Г§Г¤Г ГҐГ¬ Г®ГЎГєГҐГЄГІ newDate() ГЁ ГЁГ§ГўГ«ГҐГЄГ ГҐГ¬ Г¬ГЁГ­ГіГІГ» ГІГҐГЄГіГ№ГҐГЈГ® ГўГ°ГҐГ¬ГҐГ­ГЁ
 	var minutes = new Date().getMinutes();
-	// Добавляем начальный ноль к значению минут
+	// Г„Г®ГЎГ ГўГ«ГїГҐГ¬ Г­Г Г·Г Г«ГјГ­Г»Г© Г­Г®Г«Гј ГЄ Г§Г­Г Г·ГҐГ­ГЁГѕ Г¬ГЁГ­ГіГІ
 	$("#min").html(( minutes < 10 ? "0" : "" ) + minutes);
     },1000);
 	
 setInterval( function() {
-	// Создаем объект newDate() и извлекаем часы из текущего времени
+	// Г‘Г®Г§Г¤Г ГҐГ¬ Г®ГЎГєГҐГЄГІ newDate() ГЁ ГЁГ§ГўГ«ГҐГЄГ ГҐГ¬ Г·Г Г±Г» ГЁГ§ ГІГҐГЄГіГ№ГҐГЈГ® ГўГ°ГҐГ¬ГҐГ­ГЁ
 	var hours = new Date().getHours();
-	// Добавляем начальный ноль к значению часов
+	// Г„Г®ГЎГ ГўГ«ГїГҐГ¬ Г­Г Г·Г Г«ГјГ­Г»Г© Г­Г®Г«Гј ГЄ Г§Г­Г Г·ГҐГ­ГЁГѕ Г·Г Г±Г®Гў
 	$("#hours").html(( hours < 10 ? "0" : "" ) + hours);
     }, 1000);
 	
@@ -91,13 +91,13 @@ setInterval( function() {
 <body>
 
 <div class="topHeader">
-<!-- При желании, можно включить ссылку на главную страницу вашего сайта -->
+<!-- ГЏГ°ГЁ Г¦ГҐГ«Г Г­ГЁГЁ, Г¬Г®Г¦Г­Г® ГўГЄГ«ГѕГ·ГЁГІГј Г±Г±Г»Г«ГЄГі Г­Г  ГЈГ«Г ГўГ­ГіГѕ Г±ГІГ°Г Г­ГЁГ¶Гі ГўГ ГёГҐГЈГ® Г±Г Г©ГІГ  -->
 <!-- 
-	<a class="backArticle" href="/">Главная страница &gt;&gt;&gt;</a>
+	<a class="backArticle" href="/">ГѓГ«Г ГўГ­Г Гї Г±ГІГ°Г Г­ГЁГ¶Г  &gt;&gt;&gt;</a>
 	-->
 </div>
 
-<h1>Время</h1>
+<h1>Г‚Г°ГҐГ¬Гї</h1>
 
 <div class="container">
 
